# AIClient

./: Cargo.toml
.github/workflows/: macOS.yml  rust.yml
core/: Cargo.toml
core/servers/llama-cpu-ubuntu-x64/: libggml-base.so.0.9.5  libllama.so.0  libllama.so.0.0.7911  libmtmd.so.0  llama-bench  llama-gguf-split  llama-quantize  llama-tokenize
core/src/: assistant.rs  chat.rs  db.rs  directory.rs  lib.rs  main.rs
core/src/adapters/: huggingface.rs
src/: lib.rs  main.rs  screen.rs  styles.rs
src/screen/: conversation.rs  loading.rs
