[package]
name = "convo"
version = "0.1.0"
edition = "2024"

[dependencies]
convo_core.path = "./core" 

iced = { version = "0.14.0", features = ["tokio"]}
iced_dialog = "0.14.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.19.0", features = ["v4"]}
