[package]
name = "convo"
version = "0.1.0"
edition = "2024"

[dependencies]
convo_core.path = "./core" 
dirs = "6.0.0"
futures = "0.3.31"
hf-hub = "0.4.3"

iced = { version = "0.14.0", features = ["tokio", "sipper"]}
iced_dialog = "0.14.0"
reqwest = {version = "0.13.1", features = ["stream"]}
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.17"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.19.0", features = ["v4"]}
