[package]
name = "convo_core"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0" 
iced = { version = "0.14.0", features = ["markdown"] }
reqwest = "0.13.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.49.0", features = ["macros", "process", "rt", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"

